package eu.happycoders.adventofcode2015.day23;

/**
 * Advent of Code 2015 – Object-Oriented Solutions in Java.
 *
 * <p>Marker interface for all instructions.
 *
 * @author <a href="mailto:sven@happycoders.eu">Sven Woltmann</a>
 */
interface Instruction {}
