package eu.happycoders.adventofcode2015.day7;

/**
 * Advent of Code 2015 – Object-Oriented Solutions in Java.
 *
 * <p>The input for a gate, can be a {@link Wire} or a {@link SpecificValue}.
 *
 * @author <a href="mailto:sven@happycoders.eu">Sven Woltmann</a>
 */
interface GateInput extends WireSource {}
